--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <a href="https://www.minecraftmaps.com/">Minecraft Maps</a><br>
             <a href="https://files.minecraftforge.net/">Forge(MOD)</a><br> 
             <a href="https://minecraft.novaskin.me/wallpapers">Nova Skin(MC封面制作)</a><br>
-            <a href="https://www.mcmod.cn/">Mojang Jira(漏洞反馈)</a><br>
-            <a href="https://www.mcmod.cn/">MC百科</a><br>
-            <a href="https://www.mcmod.cn/">MC百科</a><br>
+            <a href="https://bugs.mojang.com">Mojang Jira(漏洞反馈)</a><br>
+            <a href="http://mineplugin.org">Minecraft 插件百科</a><br>
+            <a href="https://wiki.mcbe-dev.net">Minecraft基岩版开发Wiki</a><br>
             <a href="www.optifine.net">Optifine(光影)</a>
             
         </article>  
